修复了一些bug

--- a/easyFileDesk.html
+++ b/easyFileDesk.html
@@ -29,7 +29,7 @@
             display: none; /* 隐藏滚动条 */
         }
     </style>
-    <div class="content_box">
+    <div class="content_box" id="content_box">
         <div class="container" id="main" style="margin-top: 20px;">
             <div class="header">
                 <div class="time-display">
