--- a/easyFileDesk.html
+++ b/easyFileDesk.html
@@ -47,8 +47,16 @@
             display: none;
         }
         .file-list-cl{
-            width: 1.5%;
+            width: 1.3%;
             margin-right: 10px;
+        }
+        .file-cl:hover{
+            scale: 1.5;
+            transition: all 0.5s;
+        }
+        .file-list-cl:hover{
+            scale: 1.5;
+            transition: all 0.5s;
         }
         .file-item:hover .file-list-cl{
             display: block;
