新增图片预览功能 | update 1.12.0

--- a/easyFileDesk.html
+++ b/easyFileDesk.html
@@ -591,6 +591,16 @@
             <p id="sys_note" class="setting_note">在桌面显示此电脑、回收站、控制面板</p>
             <div class="settings-section">
                 <div class="system-theme-toggle">
+                    <span>使用图片预览</span>
+                    <label class="switch">
+                        <input type="checkbox" id="imgpreToggle">
+                        <span class="slider round"></span>
+                    </label>
+                </div>
+            </div>
+            <p id="sys_note" class="setting_note">关闭后将不会加载图片预览，节约性能</p>
+            <div class="settings-section">
+                <div class="system-theme-toggle">
                     <span>打开文件后收起窗口</span>
                     <label class="switch">
                         <input type="checkbox" id="of_sToggle">
@@ -692,7 +702,7 @@
                     <input type="range" id="blurSlider" class="blur-slider" min="0" max="100" value="0">
                 </div>
             </div>
-            <p id="v_note" style="font-size: 15px;width: 100%;text-align: center;color: rgb(163, 163, 163);">v1.11.1</p>
+            <p id="v_note" style="font-size: 15px;width: 100%;text-align: center;color: rgb(163, 163, 163);">v1.12.0</p>
         </div>
     </div>
     </div>
