--- a/easyFileDesk.html
+++ b/easyFileDesk.html
@@ -304,6 +304,10 @@
                 <i class="fas fa-folder-open"></i>
                 <span>打开</span>
             </div>
+            <div class="context-menu-item" id="menuOpenLocation">
+                <i class="fas fa-folder-open"></i>
+                <span>打开文件所在位置</span>
+            </div>
             <div class="context-menu-item" id="menuCopy">
                 <i class="fas fa-copy"></i>
                 <span>复制</span>
@@ -534,6 +538,7 @@
 
         .dir_btn:hover {
             background-color: #f7f7f7;
+            color: black;
         }
 
         .dir_btn_active {
