--- a/easyFileDesk.html
+++ b/easyFileDesk.html
@@ -695,9 +695,18 @@
                     <span>背景模式</span>
                     <select class="cf_type_toggle" id="bgType_toggle">
                         <option value="1">正常</option>
-                        <option value="2">毛玻璃</option>
-                        <option value="3">透明</option>
+                        <option value="2">透明</option>
+                        <option value="3">半透明增强</option>
                     </select>
+                </div>
+            </div>
+            <div class="settings-section">
+                <div class="system-theme-toggle">
+                    <span>毛玻璃</span>
+                    <label class="switch">
+                        <input type="checkbox" id="blurToggle">
+                        <span class="slider round"></span>
+                    </label>
                 </div>
             </div>
             <div class="settings-section">
