--- a/easyFileDesk.html
+++ b/easyFileDesk.html
@@ -732,7 +732,7 @@
                     </div>
                 </div>
             </div>
-            <div class="settings-section" style="margin-top: 20px;">
+            <div class="settings-section" id="bg_setting" style="margin-top: 20px;">
                 <h4>自定义背景设置</h4>
                 <div class="bg-settings">
                     <div class="bg-buttons">
