修复了若干bug

--- a/easyFileDesk.html
+++ b/easyFileDesk.html
@@ -746,7 +746,7 @@
                     <input type="range" id="blurSlider" class="blur-slider" min="0" max="100" value="0">
                 </div>
             </div>
-            <p id="v_note" style="font-size: 15px;width: 100%;text-align: center;color: rgb(163, 163, 163);">v2.0.1 beta</p>
+            <p id="v_note" style="font-size: 15px;width: 100%;text-align: center;color: rgb(163, 163, 163);">v2.0.2</p>
         </div>
     </div>
     </div>
